# mineola

./: .gitignore  CMakeLists.txt  Dockerfile.build  MineolaJNIAPI.cpp  README.md  conanfile.py
AndroidExample/app/: CMakeLists.txt  build.gradle
AndroidExample/app/src/main/: AndroidManifest.xml
AndroidExample/app/src/main/assets/bundled/: gltfscene.json  kueken7_rgba_astc4x4_srgb.ktx  quad.ply  scene.json
AndroidExample/app/src/main/cpp/: RenderTest.cpp
AndroidExample/app/src/main/java/com/oppentech/androidexample/: GLES3JNIView.java  MainActivity.java  RenderTestLib.java
AndroidExample/app/src/main/java/com/oppentech/mineola/: MineolaJNILib.java
AndroidExample/gradle/wrapper/: gradle-wrapper.properties
android/: CMakeLists.txt  conanfile.py
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/gltfview/app/src/main/: AndroidManifest.xml
android/gltfview/app/src/main/cpp/: GLTFViewer.cpp  conanfile.txt
android/gltfview/app/src/main/java/com/shenfy/mineola/: MineolaJNILib.java
android/gltfview/app/src/main/java/com/shenfy/mineola/gltfviewer/: GLTFViewerLib.java
android/gltfview/gradle/wrapper/: gradle-wrapper.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/src/: MineolaJNIAPI.cpp
dependencies/include/glad/: glad.h
include/: Animation.h  AppHelper.h  Camera.h  CameraController.h  CompressedTextureSrc.h  Engine.h  Entity.h  FileSystem.h  Framebuffer.h  GLEffect.h  GLITextureSrc.h  GLMHelper.h  GLProgram.h  GLShader.h  GLTFLoader.h  GraphicsBuffer.h  ImgppTextureSrc.h  KTXImageLoader.h  Light.h  ManagerBase.h  Material.h  Noncopyable.h  PBRShaders.h  PixelType.h  PolygonSoupSerialization.h  PrimitiveHelper.h  RenderPass.h  RenderState.h  RenderStateManager.h  Renderable.h  RendererViewController.h  ResourceManager.h  STBImagePlugin.h  SceneLoader.h  SceneNode.h  ShaderParser.h  Skin.h  Texture.h  TextureDesc.h  TextureHelper.h  (+6 more)
ios/: CMakeLists.txt  conanfile.txt
ios/src/: AppDelegate.m  RenderTest.mm  gltf.json  main.m
mineola.xcodeproj/: project.pbxproj
mineola.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mineola.xcodeproj/xcshareddata/xcschemes/: mineola test.xcscheme  mineola.xcscheme
mineola_ios_test/: AppDelegate.m  RenderTest.h  RenderTest.mm  gltfscene.json  quad.ply  scene.json
pc/: CMakeLists.txt  conanfile.py  conanfile.txt
pc/include/: TextureMixer.h
pc/resrc/: Arial16.json  cloth.json  gltf.json  ocean.frag  ocean.json  tex2d.frag
pc/src/: AppFrame.cpp  cloth.cpp  glad.c  gltfdemo.cpp  ocean.cpp
pcexample/include/: AppFrame.h
pcexample/resrc/: demo1.json  demo2.json  imgpptexdemo.json  tex2d.vert
pcexample/src/: AppFrame.cpp  TextureMixer.cpp  example.cpp  glad.c  gltfdemo.cpp  gltfscene.json  imgpptexdemo.cpp  scene.json  scene2.json
src/: AnimatedEntity.cpp  Animation.cpp  AppHelper.cpp  CMakeLists.txt  CMakePresets.json  Camera.cpp  CameraController.cpp  CompressedTextureSrc.cpp  Engine.cpp  Entity.cpp  FPSController.cpp  Framebuffer.cpp  GLEffect.cpp  GLITextureSrc.cpp  GLProgram.cpp  GLShader.cpp  GLTFLoader.cpp  GraphicsBuffer.cpp  ImgppTextureSrc.cpp  KTXImageLoader.cpp  Material.cpp  PBRShaders.cpp  PolygonSoup.cpp  PolygonSoupLoader.cpp  PolygonSoupSerialization.cpp  Rbt.cpp  RenderPass.cpp  RenderStateFactory.cpp  Renderable.cpp  SceneLoader.cpp  SceneNode.cpp  ShaderParser.cpp  Texture.cpp  TextureHelper.cpp  TurntableController.cpp  UniformBlock.cpp  UniformHelper.cpp  UniformWrappers.cpp  VertexType.cpp  mineolaConfig.cmake  (+3 more)
src/android/gltfview/: settings.gradle
src/android/gltfview/app/: build.gradle
src/android/gltfview/app/src/main/cpp/: CMakeLists.txt
src/android/gltfview/app/src/main/java/com/shenfy/mineola/gltfviewer/: GLES3JNIView.java  MainActivity.java
src/apps/: CMakeLists.txt
src/apps/ios/: AppDelegate.h  RenderTest.h  gltf.json
src/apps/pc/: EnvBRDF.cpp  EnvBRDF.h  cloth.cpp  egltest.cpp  envlight.cpp  gltfdemo.cpp  guidemo.cpp  ocean.cpp
src/apps/pc/resrc/: cloth.json  gltf.json  guidemo.json  ocean.json  ocean.vert  phong.frag  phong.vert  shadow.vert
src/include/: AnimatedEntity.h  GLMHelper.h  GraphicsBuffer.h  ImgppTextureSrc.h  MeshIO.h  RenderStateFactory.h  SceneLoader.h  Viewport.h
src/include/mineola/: AABB.h  Animation.h  AppFrame.h  AppHelper.h  BasisObj.h  Camera.h  CameraController.h  Engine.h  Entity.h  EnvLight.h  FPSCounter.h  Font.h  GLMDefines.h  GLMHelper.h  GLTFLoader.h  GraphicsBuffer.h  GuiAppFrame.h  Imgpp.hpp  ImgppAlgorithms.hpp  ImgppBlockImg.hpp  ImgppCompositeImg.hpp  ImgppGLHelper.hpp  ImgppGLMTraits.hpp  ImgppImgBase.hpp  ImgppLoaders.hpp  ImgppLoadersExt.hpp  ImgppOpenCV.hpp  ImgppSampler.hpp  ImgppTextureDesc.hpp  ImgppTextureHelper.hpp  ImgppTextureSrc.h  ImgppTypeTraits.hpp  Light.h  ManagerBase.h  Material.h  MathHelper.h  MeshIO.h  PBRShaders.h  PixelType.h  PolygonSoup.h  (+28 more)
src/ios/src/: RenderTest.h  RenderTest.mm
src/pc/resrc/: gltf.json  shadow.frag  shadow.vert
src/pc/src/: AppFrame.cpp  cloth.cpp  gltfdemo.cpp  ocean.cpp
src/src/: AABB.cpp  AnimatedEntity.cpp  Animation.cpp  AppFrame.cpp  AppHelper.cpp  ArcballController.cpp  BasisObj.cpp  BitmapFont.cpp  CMakeLists.txt  Camera.cpp  CameraController.cpp  Engine.cpp  Entity.cpp  EnvLight.cpp  FPSController.cpp  FPSCounter.cpp  FileSystem.cpp  Framebuffer.cpp  GLEffect.cpp  GLMHelper.cpp  GLProgram.cpp  GLShader.cpp  GLTFLoader.cpp  GraphicsBuffer.cpp  GuiAppFrame.cpp  ImgppTextureSrc.cpp  KTXImageLoader.cpp  Light.cpp  Material.cpp  MeshIO.cpp  PBRShaders.cpp  PolygonSoup.cpp  PolygonSoupLoader.cpp  PolygonSoupSerialization.cpp  PrefabHelper.cpp  PrimitiveHelper.cpp  Rbt.cpp  RenderPass.cpp  RenderState.cpp  RenderStateFactory.cpp  (+22 more)
src/src/imgpp/: BmpImg.cpp  Bson.cpp  ImgppGLHelper.cpp  ImgppHelper.cpp  ImgppStringParser.h  JpegImg.cpp  KTXImage.cpp  PFMImg.cpp  PNGImg.cpp  PPMImg.cpp
src/src/imgui/: imgui_impl_opengl3.cpp
